--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <div class="text-animate">
                     <h3>Desarrollador Web</h3>
                 </div>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque optio eaque necessitatibus, nulla enim beatae! Fuga cupiditate vero iusto, nisi itaque quaerat, minus aliquam aperiam vel suscipit magni, rerum assumenda!</p>
+                <p><b>¡Bienvenido a mi espacio digital!</b> Si eres alguien que se emociona con cada nueva innovación tecnológica y encuentra alegría en el arte de codificar, entonces estás en el lugar correcto.
+                    Aquí, exploraremos juntos el fascinante mundo de la tecnología y el código.</p>
                 <div class="btn-box">
                     <a href="#" class="btn">Contratame</a>
                     <a href="#" class="btn">Hablemos</a>
@@ -56,14 +57,16 @@
             <div class="d-flex justify-content-center animacionMiCamino " data-aos="zoom-out-up">
                 <h1>Acerca de <span>Mi</span></h1>
             </div>
-            <div class="d-flex justify-content-center " data-aos="zoom-out">
-                <img src="./Imagenes/kakashi.jpg" class="img-fluid" alt="kakashi">
+            <div class="d-flex justify-content-center animacionFoto" data-aos="zoom-out">
+                <span></span>
+                <span></span>
+                <img src="./Imagenes/fotoKevinFajardo.png" class="img-fluid imgkevin" alt="kakashi">
             </div>
             <div class="contenidoAcercade" data-aos="fade-up"data-aos-anchor-placement="bottom-bottom">
                 <h2>Desarrollador Web</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae 
-                    blanditiis animi, debitis aspernatur, eligendi omnis vero ea qui minima itaque iusto atque optio ipsa eos, 
-                    nobis perspiciatis! Quam, esse ex.</p>
+                <p>La tecnología es mi pan de cada día. Me encanta explorar las últimas innovaciones, entender cómo funcionan y 
+                    aplicarlas para resolver problemas complejos. La codificación es una de mis habilidades más fuertes y disfruto 
+                    creando soluciones digitales que hacen la vida más fácil y eficiente.</p>
                 <div class="botonInfo">
                     <a href="#">Mas Info</a>
                 </div>
@@ -80,23 +83,21 @@
                         <div>
                             <h6>2018-2020</h6>
                             <h3>Ingles-B1 - ESPE</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus 
-                                cum ad molestias, doloremque maiores quo aut, quam harum labore voluptatem, 
-                                minus corporis repudiandae maxime autem voluptas similique iure id provident.</p>
+                            <p>Este curso me permitió desarrollar mis habilidades en el idioma inglés, enfocándose en mejorar mi capacidad para 
+                                entender y usar expresiones familiares de uso cotidiano. Aprendí a presentarme y a 
+                                interactuar de manera simple siempre que la otra persona hable lenta y claramente</p>
                         </div>
                         <div>
                             <h6>2018-2021</h6>
                             <h3>Tecnolgo Superior en Redes y Telecomunicaciones - ESPE</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus 
-                                cum ad molestias, doloremque maiores quo aut, quam harum labore voluptatem, 
-                                minus corporis repudiandae maxime autem voluptas similique iure id provident.</p>
+                            <p>Soy un solucionador de problemas eficaz con una habilidad innata para analizar sistemas y diagnosticar problemas. Mi capacidad para 
+                                adaptarme rápidamente a las innovaciones tecnológicas me permite mantenerme al día con las últimas tendencias.</p>
                         </div>
                         <div>
                             <h6>2023-2023</h6>
                             <h3>Desarrollador Web - CoderHouse</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus 
-                                cum ad molestias, doloremque maiores quo aut, quam harum labore voluptatem, 
-                                minus corporis repudiandae maxime autem voluptas similique iure id provident.</p>
+                            <p>Poseo un conjunto sólido de habilidades técnicas que incluyen el dominio de lenguajes de programación como HTML, CSS y una variedad de frameworks y bibliotecas modernas. 
+                            Creación de sitios web responsivos desde cero, así como en la mejora y optimización de sitios web existentes.</p>
                         </div>
                     </div>
                     <div class="col-sm-6 " data-aos="fade-right">
@@ -104,23 +105,23 @@
                         <div>
                             <h6>2021-2022</h6>
                             <h3>Tecnico de Mantenimiento - Memori Digital</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus 
-                                cum ad molestias, doloremque maiores quo aut, quam harum labore voluptatem, 
-                                minus corporis repudiandae maxime autem voluptas similique iure id provident.</p>
+                            <p>Mi experiencia abarcó desde la solución de problemas de hardware en computadoras portátiles y de escritorio, hasta la 
+                                reparación de dispositivos móviles y tabletas. Cada proyecto presentaba su desafío, desde la identificación de 
+                                componentes defectuosos hasta la realización de reparaciones delicadas.</p>
                         </div>
                         <div>
                             <h6>2022-2023</h6>
                             <h3>Dirección del Departamento TI - Comercial Silva</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus 
-                                cum ad molestias, doloremque maiores quo aut, quam harum labore voluptatem, 
-                                minus corporis repudiandae maxime autem voluptas similique iure id provident.</p>
+                            <p>Realice la creación de una página web intuitiva y eficiente que reflejara la identidad de la empresa y 
+                                facilitara la interacción con los clientes. Administre el sistema contable de la empresa, garantizando la precisión y 
+                                la eficiencia en todas las transacciones. También me encargué de la atención al cliente</p>
                         </div>
                         <div>
                             <h6>2023-2023</h6>
                             <h3>Agente Digital - Santillana</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus 
-                                cum ad molestias, doloremque maiores quo aut, quam harum labore voluptatem, 
-                                minus corporis repudiandae maxime autem voluptas similique iure id provident.</p>
+                            <p>Trabajé en la configuración de plataformas de educación, implementando soluciones personalizadas para mejorar la experiencia
+                                de aprendizaje. Mi labor incluyó la integración de herramientas interactivas, la optimización de la interfaz del usuario y la garantía
+                                de la seguridad de los datos.</p>
                         </div>
                     </div>
                 </div>
